[package]
name = "summarizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
rusqlite =  { version = "0.29.0",  features=["bundled"] }
rust-bert = "0.21.0"
sqlite-vss = { version = "0.1.1", features = ["download-libs"] }
tch = "0.13.0"


[profile.dev.package.backtrace]
opt-level = 3
